# docs/api/openapi.json
@@ -550,10 +550,12 @@
                 "type": "object",
                 "properties": {
                     "email": {
-                        "type": "string"
+                        "type": "string",
+                        "maxLength": 255
                     },
                     "password": {
-                        "type": "string"
+                        "type": "string",
+                        "maxLength": 1024
                     }
                 },
                 "required": [
